[package]
name = "meep"
version = "1.0.0"
description = "A simple pasting service."
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "AGPL-3.0"
keywords = ["pasting", "pastebin"]
categories = ["web-programming"]
repository = "https://github.com/aatxe/meep"
readme = "README.md"

[badges]
travis-ci = { repository = "aatxe/meep" }

[dependencies]
dotenv_codegen = "0.11"
diesel = { version = "1", features = ["sqlite"] }
diesel_migrations = "1"
failure = "0.1"
r2d2-diesel = "1.0"
r2d2 = "0.8"
rand = "0.4"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3", default-features = false, features = ["handlebars_templates"] }
serde = "1"
serde_derive = "1"
syntect = "2"
toml = "0.4"